fix jumping search box
git-svn-id: http://svn.uscm.org/staffsite/trunk/controlled-src@6495 e11218b7-830e-0410-a693-d1c1f8b4456b

--- a/webapps-src/staffsite/web/modules/stylesheets/search.css
+++ b/webapps-src/staffsite/web/modules/stylesheets/search.css
@@ -11,10 +11,11 @@ float:right;
 z-index:30;
 height: auto;
 border:none;
-margin-left:-20px;
+
 }
 div.quicksearch_closed{
-	width: 500px;
+	width:auto;
+	margin-left:none;
 	}
 
 div.quicksearch_open{
@@ -47,7 +48,7 @@ div.quicksearch_closed form input.name {
 	border: none;
 	font-size: 13px;
 	height:20px;
-	width: 200px;
+	width: auto;
 	margin-bottom:10px;
 	display:block;
 }
